# aiqa-client-python

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  TESTING.md  changelog.md  env.example  example.py  fastapi_example.py  how-to-publish.md  publish.sh  pyproject.toml  requirements.examples.txt  requirements.txt
.github/workflows/: deploy-python.yml
aiqa/: __init__.py  aiqa_exporter.py  client.py  constants.py  experiment_runner.py  http_utils.py  llm_as_judge.py  object_serialiser.py  span_helpers.py  test_experiment_runner.py  test_tracing.py  tracing.py  tracing_llm_utils.py  types.py
examples/chatbot/: README.md  chatbot.py  chatbot_experiment.py
examples/smoketest/: example_experiment_runner.py  fastapi_example.py
tests/: __init__.py  test_api_key.py  test_chatbot.py  test_experiment_runner.py  test_integration.py  test_integration_api_key.py  test_llm_as_judge.py  test_object_serialiser.py  test_span_helpers.py  test_startup_reliability.py  test_tracing.py  test_tracing_llm_utils.py
